# ffi-test

./: CMakeLists.txt  README.md  build-graphar.sh  build.xml  dependency-reduced-pom.xml  pom.xml  run.sh
src/main/java/com/alibaba/graphar/utils/: CppClassName.java  CppHeaderName.java  InfoVersion.java
src/test/java/com/alibaba/graphar/utils/: InfoVersionTest.java
